// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Renders correctly 1`] = `
<svg
  className="sc-bdVaJa fseadf"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx={12}
    cy={12}
    fill="none"
    r={10}
    stroke="var(--color-gray-300)"
    strokeWidth={4}
    style={
      Object {
        "opacity": 0.25,
      }
    }
  />
  <circle
    cx={12}
    cy={12}
    fill="none"
    r={10}
    stroke="var(--color-gray-500)"
    strokeDasharray={32}
    strokeLinecap="round"
    strokeWidth={4}
  />
</svg>
`;

exports[`Loading with color Renders correctly 1`] = `
<svg
  className="sc-bdVaJa fseadf"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx={12}
    cy={12}
    fill="none"
    r={10}
    stroke="var(--color-gray-300)"
    strokeWidth={4}
    style={
      Object {
        "opacity": 0.25,
      }
    }
  />
  <circle
    cx={12}
    cy={12}
    fill="none"
    r={10}
    stroke="white"
    strokeDasharray={32}
    strokeLinecap="round"
    strokeWidth={4}
  />
</svg>
`;
